<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon2018.androidacademytlv.mapapp.CreateTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/create_trip_padding"
        android:background="@drawable/yuriy_garnaev_395879_unsplash"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/create_trip_edit_background"
            >
            <TextView
                android:layout_width="@dimen/create_trip_text_width"
                android:layout_height="wrap_content"
                android:text="@string/create_trip_new_trip"
                android:paddingLeft="@dimen/create_trip_edit_padding"
                android:paddingVertical="@dimen/create_trip_new_trip_padding"
                android:textSize="@dimen/create_trip_caption_text_size"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_trip_edit_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/create_trip_text_width"
                    android:layout_height="match_parent"
                    android:text="@string/trip_name"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/create_trip_edit_padding"
                    android:textSize="@dimen/create_trip_text_size"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/create_trip_edit_height"
                    android:paddingHorizontal="@dimen/create_trip_edit_padding"
                    android:id="@+id/create_trip_title"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textSize="@dimen/create_trip_text_size"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_trip_edit_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/create_trip_text_width"
                    android:layout_height="match_parent"
                    android:text="@string/start_date"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/create_trip_edit_padding"
                    android:textSize="@dimen/create_trip_text_size"/>
                <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_trip_edit_height"
                android:paddingHorizontal="@dimen/create_trip_edit_padding"
                android:id="@+id/create_trip_start"
                android:maxLines="1"
                android:inputType="none"
                android:clickable="true"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_trip_edit_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/create_trip_text_width"
                    android:layout_height="match_parent"
                    android:text="@string/budget"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/create_trip_edit_padding"
                    android:textSize="@dimen/create_trip_text_size"/>
                <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_trip_edit_height"
                android:paddingHorizontal="@dimen/create_trip_edit_padding"
                android:id="@+id/create_trip_budget"
                android:maxLines="1"
                android:inputType="numberDecimal"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_trip_edit_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/create_trip_text_width"
                    android:layout_height="match_parent"
                    android:text="@string/currency"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/create_trip_edit_padding"
                    android:textSize="@dimen/create_trip_text_size"/>
                <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_trip_edit_height"
                android:paddingHorizontal="@dimen/create_trip_edit_padding"
                android:id="@+id/create_trip_currency"
                android:maxLines="1"
                android:inputType="text"
                />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_trip_save"
                android:layout_marginTop="@dimen/create_trip_button_margin"
                android:paddingLeft="@dimen/create_trip_button_horizontal_padding"
                android:paddingRight="@dimen/create_trip_button_horizontal_padding"
                android:paddingTop="@dimen/create_trip_button_vertical_padding"
                android:paddingBottom="@dimen/create_trip_button_vertical_padding"
                android:onClick="onSaveClick"
                />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
